--- a/Praktes.html
+++ b/Praktes.html
@@ -9,5 +9,6 @@
 			<li> weight: 10 lbs </li>
 			<li> color of skin: pale white </li>
 			<li> color of eyes: black </li>
+			<li> color of truth: null </li>
 	</body>
 </html>
